2002-04-02  jacob berkman  <jacob@ximian.com>

	* configure.in: 
	* capplets/Makefile.am (always_built_SUBDIRS): remove
	default-applications

2002-03-28  jacob berkman  <jacob@ximian.com>

	* configure.in: add X libraries to link lines for things that make
	X calls (since pango/gtk don't pull those in for us)

Thu Mar 28 14:35:12 2002  Jonathan Blandford  <jrb@gnome.org>

	* configure.in (RELEASE): 1.99.6

2002-03-26  jacob berkman  <jacob@ximian.com>

	* capplets/Makefile.am (always_built_SUBDIRS): remove screensaver

	* capplets/screensaver/: remove as xscreensaver provides these
	things

	* configure.in: remove xscreensaver check again as xscreensaver
	supplies the .desktop file for itself
	(AC_OUTPUT): remove capplets/screensaver/Makefile

2002-03-26  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: The check for xscreensaver got removed, add it back
	in.

2002-03-26  jacob berkman  <jacob@ximian.com>

	* schemas/Makefile.am (schema_DATA): add new .schemas file

	* schemas/apps_gnome_settings_daemon_screensaver.schemas: settings
	for starting screensaver

Mon Mar 25 00:51:06 2002  Jonathan Blandford  <jrb@redhat.com>

	* configure.in (RELEASE): 1.99.5

Mon Mar 25 00:04:37 2002  Jonathan Blandford  <jrb@redhat.com>

	* capplets/keybindings/gnome-keybinding-properties.glade: Clean up
	UI a little.

2002-03-19  Richard Hestilow  <hestilow@ximian.com>

	* configure.in (COMMON_LIBS): Link to common.la and not common.a.

Sun Mar 17 23:26:02 2002  Jonathan Blandford  <jrb@gnome.org>

	* capplets/keybindings/eggcellrendererkeys.[ch]: sync to CVS.

2002-03-17  jacob berkman  <jacob@ximian.com>

	* capplets/keybindings/Makefile.am
	(gnome_keybinding_properties_SOURCES): add eggcellrendererkeys.h

2002-03-18  Zbigniew Chyla  <cyba@gnome.pl>

	* capplets/common/activate-settings-daemon.c (popup_error_message):
	Fixed compilation error.

Sun Mar 17 16:30:48 2002  Jonathan Blandford  <jrb@redhat.com>

	* capplets/keybindings/gnome-keybinding-properties.c