@@ -1,5 +1,3 @@
-SUBDIRS = Sawfish
-
 ## removed legacy applications for now -- grdb is not part of GNOME2
 capplets = 
 
