@@ -197,7 +197,6 @@ capplets/Makefile
 capplets/common/Makefile
 capplets/background/Makefile
 capplets/desktop-links/Makefile
-capplets/desktop-links/Sawfish/Makefile
 capplets/file-types/Makefile
 capplets/file-types/libuuid/Makefile
 capplets/font/Makefile
