@@ -16,18 +16,6 @@ capplets/desktop-links/Accessibility.directory.in.in
 capplets/desktop-links/Advanced.directory.in.in
 capplets/desktop-links/cd.desktop.in.in
 capplets/desktop-links/legacy-applications.desktop.in.in
-capplets/desktop-links/Sawfish/appearance-properties.desktop.in
-capplets/desktop-links/Sawfish/bindings-properties.desktop.in
-capplets/desktop-links/Sawfish/focus-properties.desktop.in
-capplets/desktop-links/Sawfish/match-properties.desktop.in
-capplets/desktop-links/Sawfish/maximize-properties.desktop.in
-capplets/desktop-links/Sawfish/meta-properties.desktop.in
-capplets/desktop-links/Sawfish/misc-properties.desktop.in
-capplets/desktop-links/Sawfish/move-properties.desktop.in
-capplets/desktop-links/Sawfish/placement-properties.desktop.in
-capplets/desktop-links/Sawfish/Sawfish.directory.in.in
-capplets/desktop-links/Sawfish/sound-properties.desktop.in
-capplets/desktop-links/Sawfish/workspace-properties.desktop.in
 capplets/file-types/category-names.h
 capplets/file-types/file-types-capplet.c
 capplets/file-types/file-types.desktop.in
