@@ -1,3 +1,7 @@
+2002-04-04  jacob berkman  <jacob@ximian.com>
+
+	* Makefile.am (SUBDIRS): remove sawfish directory
+
 2002-03-08  Seth Nickell  <snickell@stanford.edu>
 
 	* Makefile.am:
