@@ -1,3 +1,7 @@
+2002-04-04  jacob berkman  <jacob@ximian.com>
+
+	* POTFILES.in: remove sawfish files
+
 2002-04-03  Pauli Virtanen  <pauli.virtanen@hut.fi>
 
 	* fi.po: Updated Finnish translation.
