@@ -1,3 +1,7 @@
+2002-04-04  jacob berkman  <jacob@ximian.com>
+
+	* configure.in (AC_OUTPUT): remove sawfish Makefile
+
 2002-04-02  jacob berkman  <jacob@ximian.com>
 
 	* configure.in: 
